--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css?family=Playfair+Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic&display=swap"
         rel="stylesheet" />
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
@@ -47,7 +47,7 @@
         </section>
         <section class="backroundWhite">
             <div class="container aboutUs">
-                <img src="/img/national-cancer-institute-UK0lzD16BxI-unsplash 1workProcess.png" alt="workProcess">
+                <img src="img/national-cancer-institute-UK0lzD16BxI-unsplash 1workProcess.png" alt="workProcess">
                 <div class="blockAboutUsInfo">
                     <p>passione mai vista prima</p>
                     <h2>Una storia che merita di essere raccontata</h2>
@@ -76,14 +76,14 @@
                             montattura più adatta alle tue esigneze sapendo accontentare anche gli occhi più attenti.
                         </p>
                     </div>
-                    <img src="/img/annisa-ica-2hrKrytSI1Q-unsplash 1.png" alt="annisa">
+                    <img src="img/annisa-ica-2hrKrytSI1Q-unsplash 1.png" alt="annisa">
                 </div>
                 <h3>Tra i marchi più famosi troverai</h3>
                 <figure class="logoBrand">
-                    <img src="/img/rb.svg" alt="rb">
-                    <img src="/img/moskot.svg" alt="moskot">
-                    <img src="/img/tomford.svg" alt="tf">
-                    <img src="/img/op.svg" alt="op">
+                    <img src="img/rb.svg" alt="rb">
+                    <img src="img/moskot.svg" alt="moskot">
+                    <img src="img/tomford.svg" alt="tf">
+                    <img src="img/op.svg" alt="op">
                 </figure>
             </div>
         </section>
@@ -91,7 +91,7 @@
             <div class="container">
                 <div class="aboutGlasses">
                     <div class="imgGlasses">
-                        <img src="/img/david-travis-.png" alt="david-travis">
+                        <img src="img/david-travis-.png" alt="david-travis">
                     </div>
                     <div class="aboutGlassesInfo">
                         <p>CI prenderemo cura dei tuoi occhi</p>
