--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,8 @@
         rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Ottica
+    </title>
 </head>
 
 <body>
